--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
                 <span></span>
             </label>
             <ul class="nav-menu">
-                <li><a href="#" class="active">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="#news">News</a></li>
                 <li><a href="#opinions">Opinions</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="privacy.html">Privacy</a></li>
+                <li><a href="terms.html">Terms</a></li>
             </ul>
         </nav>
         <section class="hero" style="background-image: url('images/hero.png');">
@@ -89,6 +90,21 @@
                 </form>
             </div>
         </section>
+
+        <!-- Safety and Editorial Guidelines -->
+        <section class="safety-section">
+            <div class="container safety-container">
+                <h2>Our Commitment to Integrity</h2>
+                <p>
+                    Bharat Chronicle adheres to stringent editorial standards to ensure that the
+                    news we publish is accurate, fair and supportive of India’s progress.
+                    We fact‑check our stories, cite credible sources and strive to
+                    highlight achievements that uplift the nation.  Our satire and
+                    opinions are clearly labelled to distinguish them from
+                    news reporting.
+                </p>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
@@ -121,51 +137,51 @@
     <script id="news-data" type="application/json">
     [
       {
-        "title": "Government Unveils New Growth Plan",
-        "description": "India's government has announced a sweeping economic stimulus package aimed at boosting manufacturing and infrastructure. Analysts say the plan could add billions to GDP over the next decade.",
-        "link": "https://example.com/news/government-growth-plan",
+        "title": "India Posts Record Economic Growth",
+        "description": "Official figures show India’s GDP grew at its fastest pace in over a decade, driven by booming manufacturing and resilient domestic demand.",
+        "link": "https://example.com/news/india-record-growth",
         "image": null
       },
       {
-        "title": "High Court Sets Precedent in Landmark Case",
-        "description": "In a unanimous ruling, the Supreme Court delivered a historic verdict that redefines citizens' rights and will have far‑reaching implications for future litigation.",
-        "link": "https://example.com/news/supreme-court-ruling",
+        "title": "Chandrayaan‑3 Touches Down on the Moon",
+        "description": "ISRO’s latest lunar mission successfully lands near the Moon’s south pole, cementing India’s status as a spacefaring powerhouse.",
+        "link": "https://example.com/news/chandrayaan-3-landing",
         "image": null
       },
       {
-        "title": "Iconic Actor Announces Retirement",
-        "description": "Bollywood legend Rajesh Kapoor surprised fans by announcing his retirement from cinema after a career spanning four decades. Tributes have poured in from across the industry.",
-        "link": "https://example.com/news/bollywood-retirement",
+        "title": "Start‑Up Hub: India Becomes 3rd Largest Ecosystem",
+        "description": "With record funding and unicorns, India overtakes the UK to become the third largest start‑up ecosystem globally.",
+        "link": "https://example.com/news/india-startup-ecosystem",
         "image": null
       },
       {
-        "title": "Tech Giant Launches Affordable Smartphone",
-        "description": "Bharat's leading tech company unveiled a new smartphone that promises top‑tier features at a fraction of the cost. The device aims to make cutting‑edge technology accessible to millions.",
-        "link": "https://example.com/news/affordable-smartphone",
+        "title": "Athletes Shine at World Championships",
+        "description": "Indian athletes bring home multiple medals from the World Athletics Championships, inspiring a new generation of sports fans.",
+        "link": "https://example.com/news/world-championships-success",
         "image": null
       },
       {
-        "title": "Historic Temple Restoration Completed",
-        "description": "After years of meticulous work, the restoration of a 12th‑century temple has been completed. The site, a UNESCO World Heritage candidate, will reopen to pilgrims next month.",
-        "link": "https://example.com/news/temple-restoration",
+        "title": "Green Energy Startup Secures Mega Investment",
+        "description": "A Gurugram‑based renewable energy startup raises $100 million to expand solar and wind projects across the country.",
+        "link": "https://example.com/news/green-energy-startup",
         "image": null
       },
       {
-        "title": "Local Startup Secures Major Funding Round",
-        "description": "In a sign of growing investor confidence, a Bengaluru‑based fintech startup closed a $50 million funding round led by global venture capital firms. The company plans rapid expansion.",
-        "link": "https://example.com/news/startup-funding",
+        "title": "Digital India: Government Announces 5G Rollout",
+        "description": "The central government unveils a roadmap for nationwide 5G deployment, promising transformative connectivity by year‑end.",
+        "link": "https://example.com/news/5g-rollout-india",
         "image": null
       },
       {
-        "title": "Monsoon Brings Relief and Challenges",
-        "description": "Heavy rains have brought much‑needed relief to drought‑hit regions, but flooding has displaced thousands in low‑lying areas. Relief teams are working around the clock to provide aid.",
-        "link": "https://example.com/news/monsoon-relief",
+        "title": "Culture Corner: Festival of Lights Unites Communities",
+        "description": "Millions across Bharat celebrate Diwali with diya displays, prayers and community outreach, demonstrating unity in diversity.",
+        "link": "https://example.com/news/diwali-celebration",
         "image": null
       },
       {
-        "title": "Cricket Team Clinches Series Victory",
-        "description": "The national cricket team delivered a stunning performance to win the series against their arch‑rivals. Celebrations erupted across the country as fans cheered their heroes.",
-        "link": "https://example.com/news/cricket-series-victory",
+        "title": "India Leads Climate Action at Global Summit",
+        "description": "At the COP climate summit, India pledges to achieve net zero emissions ahead of schedule while advocating for climate justice.",
+        "link": "https://example.com/news/india-climate-leadership",
         "image": null
       }
     ]
