--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
              a "river of news" experience inspired by modern news portals. -->
         <section id="news" class="featured-posts">
             <div class="container">
-                <h2>Latest Stories</h2>
+<h2>Latest Stories <a href="news.html" class="see-more">(See more)</a></h2>
                 <!-- The posts-grid will be filled dynamically. Initially empty. -->
                 <div class="posts-grid" id="news-stream"></div>
                 <!-- Optional loading indicator -->
